--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -9,5 +11,6 @@ html {
 }
 
 body {
-  background-color: #edf6e5;
+  background-color: #090b28;
+  font-family: "Montserrat", sans-serif;
 }
