--- a/src/components/BookList/BookList.module.css
+++ b/src/components/BookList/BookList.module.css
@@ -1,7 +1,8 @@
 .listContainer {
   display: grid;
   grid-template-columns: auto auto auto;
-  grid-gap: 5rem;
+  grid-column-gap: 3rem;
+  grid-row-gap: 8rem;
   padding-top: 5rem;
   margin-top: 3rem;
 }
