--- a/src/components/UI/Card/Card.module.css
+++ b/src/components/UI/Card/Card.module.css
@@ -1,7 +1,7 @@
 .card {
   position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: flex-start;
   width: 370px;
   height: 250px;
@@ -10,9 +10,7 @@
 }
 
 .cardBody {
-  position: absolute;
-  top: 3rem;
-  right: 8rem;
+  margin: 20px;
 }
 
 .image {
@@ -24,10 +22,17 @@
   border-radius: 20px;
 }
 
+.image:hover {
+  transform: scale(1.1);
+}
+
 .title {
   color: #ffffff;
   font-size: 2rem;
   font-weight: 900;
+  width: 17rem;
+  height: 5rem;
+  overflow: hidden;
 }
 
 .author {
