--- a/src/components/BookList/BookList.module.css
+++ b/src/components/BookList/BookList.module.css
@@ -1,3 +1,37 @@
+.booksMenu {
+  display: grid;
+  grid-gap: 20px;
+  width: 100%;
+  height: 60rem;
+  grid-template-areas:
+    "daily newReleases bestsellers"
+    "topAuthors topAuthors topAuthors";
+}
+
+.daily {
+  grid-area: daily;
+  background-color: red;
+}
+.newReleases {
+  grid-area: newReleases;
+  background-color: aqua;
+}
+.bestsellers {
+  grid-area: bestsellers;
+  background-color: cadetblue;
+}
+.topAuthors {
+  grid-area: topAuthors;
+  background-color: chartreuse;
+}
+
+.booksMenu > div {
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+  border: 1px solid red;
+}
+
 .listContainer {
   display: grid;
   grid-template-columns: auto auto auto;
