--- a/src/components/BookList/BookList.module.css
+++ b/src/components/BookList/BookList.module.css
@@ -1,35 +1,73 @@
 .booksMenu {
   display: grid;
-  grid-gap: 20px;
-  width: 100%;
+  grid-column-gap: 1rem;
+  width: 50%;
   height: 60rem;
   grid-template-areas:
     "daily newReleases bestsellers"
     "topAuthors topAuthors topAuthors";
+  margin-top: 2rem;
+  color: #ffffff;
+  font-weight: 900;
 }
 
 .daily {
   grid-area: daily;
-  background-color: red;
+  background: #0d0d0e;
+  background: radial-gradient(
+    circle,
+    #5800ff 15%,
+    #4f00e6 15%,
+    #350099 35%,
+    #2c0080 35%,
+    #230066 55%,
+    #1a004c 55%,
+    #120033 75%,
+    #090b28 75%
+  );
 }
+
+.daily,
+.newReleases,
+.bestsellers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .newReleases {
   grid-area: newReleases;
-  background-color: aqua;
+  background: #78dec7;
 }
 .bestsellers {
   grid-area: bestsellers;
-  background-color: cadetblue;
+  background-color: #ff7700;
 }
 .topAuthors {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   grid-area: topAuthors;
-  background-color: chartreuse;
+  padding-left: 6rem;
+  background-image: linear-gradient(
+    90deg,
+    #e10046 10%,
+    #e10046 10% 20%,
+    #fa004e 20% 30%,
+    #fb1a60 30% 40%,
+    #fb3371 40% 50%,
+    #fc4d83 50% 60%,
+    #fc6695 60% 70%,
+    #fd80a7 70% 80%,
+    #fd99b8 80% 90%,
+    #feb3ca 90% 100%
+  );
 }
 
 .booksMenu > div {
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
-  border: 1px solid red;
+  font-size: 2.6rem;
+  height: 23rem;
+  border-radius: 2rem;
 }
 
 .listContainer {
