--- a/src/components/BookList/BookList.module.css
+++ b/src/components/BookList/BookList.module.css
@@ -33,6 +33,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 .newReleases {
@@ -48,6 +49,7 @@
   align-items: center;
   justify-content: flex-start;
   grid-area: topAuthors;
+  cursor: pointer;
   padding-left: 6rem;
   background-image: linear-gradient(
     90deg,
