--- a/src/components/BookFilter/BookFilter.module.css
+++ b/src/components/BookFilter/BookFilter.module.css
@@ -5,17 +5,18 @@
 }
 
 .filterInput {
-  width: 470px;
+  width: 60rem;
   height: 50px;
-  font-size: 18px;
+  font-size: 1.6rem;
   font-weight: 300;
   border: none;
+  border-bottom: 2px solid #ffffff;
+  padding-left: 1rem;
+  background-color: transparent;
   text-transform: capitalize;
-  color: #212121;
-  padding: 10px 0 10px 30px;
-  border-radius: 12px;
-  font-family: "Lobster", cursive;
-  font-family: "Noto Sans", sans-serif;
+  color: #ffffff;
+  font-family: inherit;
+  font-weight: 700;
 }
 
 .filterInput:focus {
@@ -27,6 +28,7 @@
   right: 2.45rem;
   top: 1.4rem;
   font-size: 2.2rem;
+  color: #ffffff;
 }
 
 .exitIcon {
@@ -34,6 +36,7 @@
   right: 5.45rem;
   top: 1.4rem;
   font-size: 2rem;
+  color: #ffffff;
   cursor: pointer;
 }
 
