--- a/src/components/BookFilter/BookFilter.module.css
+++ b/src/components/BookFilter/BookFilter.module.css
@@ -26,20 +26,27 @@
 .searchIcon {
   position: absolute;
   right: 2.45rem;
-  top: 1.4rem;
+  top: 0;
   font-size: 2.2rem;
   color: #ffffff;
+  width: 50px;
+  height: 50px;
 }
 
-.exitIcon {
+.deleteIcon {
   position: absolute;
-  right: 5.45rem;
-  top: 1.4rem;
+  right: 9rem;
+  top: 0.5rem;
   font-size: 2rem;
   color: #ffffff;
   cursor: pointer;
 }
 
-.exitIcon:hover {
+.deleteIcon img {
+  width: 25px;
+  height: 25px;
+}
+
+.deleteIcon:hover {
   transform: scale(1.1);
 }
