--- a/src/components/BookMenu/BookMenu.module.css
+++ b/src/components/BookMenu/BookMenu.module.css
@@ -79,3 +79,10 @@
   height: 23rem;
   border-radius: 2rem;
 }
+
+@media screen and (max-width: 1000px) {
+  .booksMenu {
+    margin-left: 8rem;
+    width: 70%;
+  }
+}
