--- a/src/components/UI/Sidebar/Sidebar.module.css
+++ b/src/components/UI/Sidebar/Sidebar.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
-  top: 13rem;
+  top: 25rem;
   left: 2.8rem;
   width: 23rem;
   height: 30vw;
@@ -50,4 +50,16 @@
   width: 35px;
   height: 35px;
   margin-right: 15px;
+}
+
+@media screen and (max-width: 1000px) {
+  .sidebar {
+    top: 13rem;
+    left: 0rem;
+    width: 13rem;
+  }
+
+  .title {
+    margin-left: 1rem;
+  }
 }
