--- a/src/components/BookList/BookList.module.css
+++ b/src/components/BookList/BookList.module.css
@@ -6,3 +6,28 @@
   padding-top: 5rem;
   margin-top: 3rem;
 }
+
+.buttonsWrap {
+  display: flex;
+  flex-direction: row;
+}
+
+.buttons {
+  margin: 2rem;
+  font-size: 2rem;
+  background-color: #090b28;
+  color: #ffffff;
+  border: none;
+  font-weight: 900;
+  cursor: pointer;
+}
+
+.buttons:hover {
+  transform: scale(1.4);
+}
+
+@media screen and (max-width: 1000px) {
+  .listContainer {
+    grid-template-columns: auto auto;
+  }
+}
