--- a/src/pages/Homepage.module.css
+++ b/src/pages/Homepage.module.css
@@ -26,3 +26,13 @@ h1 {
   width: 50px;
   margin: 10px;
 }
+
+@media screen and (max-width: 1000px) {
+  h1 {
+    font-size: 2.2rem;
+  }
+
+  .books {
+    width: 25px;
+  }
+}
